[tool.poetry]
name = "cas-manifest"
version = "0.1.0"
description = ""
authors = ["Dan Frank"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
hashfs = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pandas = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
