[tool.poetry]
name = "cas-manifest"
version = "0.3.1"
description = "cas-manifest allows developers to store artifacts in a _content-addressable_ store using a self-describing _manifest_"
authors = ["Dan Frank"]
license = "MIT"
homepage = "https://github.com/danielhfrank/cas-manifest"
repository = "https://github.com/danielhfrank/cas-manifest"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.6.1"
hashfs = "^0.7.2"
boto3 = "^1.9.201"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
pandas = "^1.1.3"
mypy = "^0.782"
moto = "^1.3.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
